updated all css styling

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,3 +2,95 @@ body {
   font-family: "Montserrat", sans-serif;
   padding: 30px;
 }
+
+h1 {
+  color: #b6d2dd;
+  padding: 20px 20px 10px 20px;
+}
+
+h2 {
+  color: #b6d2dd;
+  padding: 20px;
+}
+
+.introduction {
+  text-align: center;
+}
+
+.about-me {
+  text-align: left;
+  background-color: #323c6b;
+  padding: 10px;
+  color: white;
+}
+
+.projects {
+  text-align: right;
+  padding: 10px;
+}
+
+.skills {
+  color: #323c6b;
+  font-size: 30px;
+  margin-top: 10px;
+}
+
+.responsive-portfolio,
+.weather-app,
+.arctic-monkeys {
+  background-color: #b6d2dd;
+  padding: 10px;
+}
+
+.weather-app-landscape,
+.weather-app-portrait {
+  max-width: display;
+}
+
+.project-link {
+  border-radius: 4px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding: 10px;
+  text-decoration: none;
+  color: white;
+  background: #323c6b;
+  text-align: left;
+}
+p {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+footer {
+  margin: 20px;
+  max-width: display;
+}
+
+.copyright {
+  text-align: left;
+}
+
+.social-icons {
+  text-align: right;
+  font-size: 30px;
+}
+
+@media (max-width: 768px) {
+  .about-me,
+  .projects,
+  .copyright,
+  .social-icons {
+    text-align: center;
+  }
+  p {
+    font-size: 15px;
+  }
+}
+
+@media (min-width: 768px) {
+  .weather-app-landscape,
+  .weather-app-portrait {
+    max-width: 300px;
+  }
+}
