--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,11 +1,15 @@
 /*ALL PAGES*/
+:root {
+  --primary-color: #b6d2dd;
+  --secondary-colour: #323c6b;
+}
 
 body {
   font-family: "Montserrat", sans-serif;
 }
 
 h1 {
-  color: #323c6b;
+  color: var(--secondary-color);
   padding: 30px 20px 10px 20px;
   font-size: 50px;
 }
@@ -17,7 +21,7 @@ h1 {
 /*HOME PAGE*/
 .about-me {
   text-align: center;
-  background-color: #b6d2dd;
+  background-color: var(--primary-color);
   padding: 10px;
   color: white;
 }
@@ -28,7 +32,7 @@ h1 {
 }
 
 .skills {
-  color: #323c6b;
+  color: var(--secondary-color);
   font-size: 30px;
   margin-top: 10px;
 }
@@ -36,7 +40,7 @@ h1 {
 .responsive-portfolio,
 .weather-app,
 .arctic-monkeys {
-  background-color: #b6d2dd;
+  background-color: var(--primary-color);
   padding: 10px;
 }
 
@@ -52,7 +56,7 @@ h1 {
   padding: 10px;
   text-decoration: none;
   color: white;
-  background: #323c6b;
+  background: var(--secondary-color);
   text-align: left;
 }
 
@@ -100,6 +104,6 @@ footer {
 
 /*ABOUT PAGE*/
 .technology {
-  color: #323c6b;
+  color: var(--secondary-color);
   font-size: 30px;
 }
