--- a/styles/styles.css
+++ b/styles/styles.css
@@ -26,7 +26,8 @@ h1 {
   color: white;
 }
 
-.projects {
+.projects,
+.experience {
   color: var(--secondary-color);
   text-align: right;
   padding: 10px;
@@ -89,11 +90,13 @@ footer {
   .about-me-title,
   .about-me,
   .projects,
+  .experience,
   .copyright,
   .social-icons {
     text-align: center;
   }
-  p {
+  p,
+  .technology {
     font-size: 15px;
   }
   h1 {
