--- a/styles/styles.css
+++ b/styles/styles.css
@@ -86,11 +86,18 @@ footer {
 
 .copyright {
   text-align: left;
+  font-size: 20px;
 }
 
 .social-icons {
   text-align: right;
   font-size: 30px;
+  color: var(--secondary-color);
+}
+
+.social-icons:hover {
+  color: var(--third-color);
+  cursor: pointer;
 }
 
 @media (max-width: 768px) {
@@ -134,7 +141,6 @@ footer {
 .skill-icon:hover {
   color: var(--third-color);
   cursor: pointer;
-  font-size: 40px;
 }
 
 /*PROJECTS PAGE*/ ;
