--- a/styles/styles.css
+++ b/styles/styles.css
@@ -122,7 +122,13 @@ footer {
   }
   p,
   .technologies {
-    font-size: 12px;
+    font-size: 13px;
+  }
+  h1 {
+    font-size: 30px;
+  }
+  h5 {
+    font-size: 18px;
   }
 }
 
